Support accessibility attribute AXSelected on Mac

Bug: 851089
Change-Id: Ibc6bd65d7a307fcad84e8720bf81885ad6a03723
Reviewed-on: https://chromium-review.googlesource.com/1091961
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565828}