content/browser/accessibility/accessibility_tree_formatter_mac.mm
@@ -193,6 +193,7 @@ NSArray* BuildAllAttributesArray() {
       @"AXRequired",
       NSAccessibilityRowHeaderUIElementsAttribute,
       NSAccessibilityRowIndexRangeAttribute,
+      NSAccessibilitySelectedAttribute,
       NSAccessibilitySelectedChildrenAttribute,
       NSAccessibilityTitleUIElementAttribute,
       NSAccessibilityURLAttribute,
